force-app/main/default/objects/RecordTypeIds__c/RecordTypeIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RecordTypeIds</label>
</CustomObject>