force-app/main/default/objects/RecordTypeIds__c/fields/BusinessDevelopmentOpp__c.field-meta.xml
<CustomField>
    <fullName>BusinessDevelopmentOpp__c</fullName>
    <label>BusinessDevelopmentOpp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>