force-app/main/default/objects/RecordTypeIds__c/fields/FinancialPartnershipOpp__c.field-meta.xml
<CustomField>
    <fullName>FinancialPartnershipOpp__c</fullName>
    <label>FinancialPartnershipOpp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>