force-app/main/default/objects/RecordTypeIds__c/fields/OnboardingCase__c.field-meta.xml
<CustomField>
    <fullName>OnboardingCase__c</fullName>
    <label>OnboardingCase</label>
    <length>18</length>
    <type>Text</type>
</CustomField>