force-app/main/default/objects/RecordTypeIds__c/fields/ProductIntegrationsOpp__c.field-meta.xml
<CustomField>
    <fullName>ProductIntegrationsOpp__c</fullName>
    <label>ProductIntegrationsOpp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>