force-app/main/default/objects/RecordTypeIds__c/fields/RenewalOpp__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpp__c</fullName>
    <label>RenewalOpp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>